# docker_blog_ai_agents_research

./: Dockerfile  README.md  compose.yaml
science_agent/: .dockerignore  README.md  pyproject.toml  sample_data.csv
science_agent/src/science_agent/: crew.py  main.py
science_agent/src/science_agent/config/: agents.yaml  tasks.yaml
science_agent/src/science_agent/tools/: custom_tool.py
